# Slider

./: .gitignore  README.md  addConsolidated.py  consolidateMove.py  moves.json  pyproject.toml  solved.json  squareOne.py
