[tool.poetry]
name = "slider"
version = "0.1.0"
description = "Square-One Cube Algorithm Display Tool"
authors = ["SiMylo <dstephenlarsen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyglet = "^1.5.0"
pygame = "^2.5.2"
pyopengl = "^3.1.7"
pyopengl-accelerate = "^3.1.7"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
